<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addMenuItem"
        android:icon="@drawable/ic_action_add"
        android:title="@string/add_menu_item"
        app:showAsAction="always"
        android:orderInCategory="1" />

    <item
        android:id="@+id/editMenuItem"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_menu_item"
        app:showAsAction="always"
        android:orderInCategory="2" />

    <item
        android:id="@+id/deleteMenuItem"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_menu_item"
        app:showAsAction="always"
        android:orderInCategory="3" />

    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings_menu_item"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="4"
        />

</menu>